--- a/src/app/generate-table/generate-table.component.html
+++ b/src/app/generate-table/generate-table.component.html
@@ -1,7 +1,6 @@
 <div class="example-table-container">
   <table mat-table [dataSource]="dataSource" matSort
-    class="example-conatiner mat-elevation-z8"
-  >
+    class="example-conatiner mat-elevation-z8">
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell mat-sort-header *matHeaderCellDef>#</th>
